--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "~3.4",
-        "phpunit/phpunit": "~5.7|~6.0|~7.0"
+        "phpunit/phpunit": "~5.7|~6.0|~7.0",
+        "spatie/temporary-directory": "^1.1"
     },
     "autoload": {
         "psr-4": {
