--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     },
     "require-dev": {
         "orchestra/testbench": "~3.4",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "phpunit/phpunit": "~5.7|~6.0|~7.0",
+        "mockery/mockery": "~1.0",
         "spatie/temporary-directory": "^1.1"
     },
     "autoload": {
