--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         "php": "^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.4",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "phpunit/phpunit": "~5.7|~6.0|~7.0",
         "mockery/mockery": "~1.0",
+        "orchestra/testbench": "~3.4",
+        "phpunit/phpunit": "~5.7|~6.0|~7.0",
         "spatie/temporary-directory": "^1.1"
     },
     "autoload": {
@@ -31,6 +31,9 @@
         "psr-4": {
             "Arubacao\\AssetCdn\\Test\\": "tests"
         }
+    },
+    "config": {
+        "sort-packages": true
     },
     "extra": {
         "laravel": {
