implement mix_cdn and asset_cdn

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "spatie/temporary-directory": "^1.1"
     },
     "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "Arubacao\\AssetCdn\\": "src"
         }
