--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,18 @@
     "authors": [
         {
             "name": "Christopher Lass",
-            "homepage": "https://github.com/arubacao"
+            "homepage": "https://c-lass.com/"
         }
     ],
     "require": {
         "php": "^7.0",
-        "laravel/framework": "~5.4"
+        "laravel/framework": "~5.4|^6.0"
     },
     "require-dev": {
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "mockery/mockery": "~1.0",
-        "orchestra/testbench": "~3.4",
-        "phpunit/phpunit": "~5.7|~6.0|~7.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "~3.4|^4.0",
+        "phpunit/phpunit": "~5.7|~6.0|^7.0|^8.0",
         "spatie/temporary-directory": "^1.1"
     },
     "autoload": {
