--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,12 @@ env:
   - TESTBENCH=3.6.* PHPUNIT=^7.0
   - TESTBENCH=3.7.* PHPUNIT=^7.0
   - TESTBENCH=3.8.* PHPUNIT=^7.5
-  - TESTBENCH=3.9.* PHPUNIT=^7.5
   - TESTBENCH=^4.0  PHPUNIT=^8.0
+
+matrix:
+  exclude:
+    - php: 7.1
+      env: TESTBENCH=^4.0  PHPUNIT=^8.0
 
 before_install:
   - composer self-update --stable --no-interaction
