--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^7.0",
-        "laravel/framework": "~5.4|^6.0"
+        "laravel/framework": "~5.4|^6.0|^7.0"
     },
     "require-dev": {
         "league/flysystem-aws-s3-v3": "^1.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "~3.4|^4.0",
+        "orchestra/testbench": "~3.4|^4.0|^5.0",
         "phpunit/phpunit": "~5.7|~6.0|^7.0|^8.0",
         "spatie/temporary-directory": "^1.1"
     },
