--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^7.0|^8.0",
         "laravel/framework": "~5.4|^6.0|^7.0|^8.0"
     },
     "require-dev": {
